--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-native": "^0.71.6",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "axios": "^1.3.4",
+    "@react-oauth/google": "^0.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
