--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_CLIENT_ID=1060362131367-p4tsacgc0usvr59cm974vc7l360htou9.apps.googleusercontent.com
 
-REACT_APP_BACKEND_URL=https://eee-backend-48lt.onrender.com/api/
+# REACT_APP_BACKEND_URL=https://eee-backend-48lt.onrender.com/api/
+
+REACT_APP_BACKEND_URL=http://localhost:4000/
