--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ REACT_APP_CLIENT_ID=1060362131367-p4tsacgc0usvr59cm974vc7l360htou9.apps.googleus
 
 REACT_APP_BACKEND_URL=https://eee-backend-48lt.onrender.com/api/
 
-# REACT_APP_BACKEND_URL=http://localhost:4000/
+# REACT_APP_BACKEND_URL=http://localhost:5000/api/
