--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "^0.71.6",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
