--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-REACT_APP_CLIENT_ID=1060362131367-p4tsacgc0usvr59cm974vc7l360htou9.apps.googleusercontent.com
+REACT_APP_CLIENT_ID=691255203190-g3gg5kocbdaqb1ivqj15utemfe240arj.apps.googleusercontent.com
 
-REACT_APP_BACKEND_URL=https://eee-backend-48lt.onrender.com/api/
+# REACT_APP_BACKEND_URL=https://eee-backend-48lt.onrender.com/api/
 
-# REACT_APP_BACKEND_URL=http://localhost:5000/api/
+REACT_APP_BACKEND_URL=http://localhost:5000/api/
+
+# REACT_APP_BACKEND_URL=https://eee-website-backend.onrender.com/api/
