--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eee",
-  "version": "0.1.0",
   "homepage": ".",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@react-oauth/google": "^0.11.1",
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
