--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ REACT_APP_CLIENT_ID=691255203190-g3gg5kocbdaqb1ivqj15utemfe240arj.apps.googleuse
 
 # REACT_APP_BACKEND_URL=https://eee-backend-48lt.onrender.com/api/
 
-REACT_APP_BACKEND_URL=http://localhost:5000/api/
+REACT_APP_BACKEND_URL= https://dop-backend.onrender.com/api/
 
 # REACT_APP_BACKEND_URL=https://eee-website-backend.onrender.com/api/
