--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_CLIENT_ID=691255203190-g3gg5kocbdaqb1ivqj15utemfe240arj.apps.googleusercontent.com
 
-REACT_APP_BACKEND_URL=https://dop-backend.onrender.com/api/
+#REACT_APP_BACKEND_URL=https://dop-backend.onrender.com/api/
 
-#REACT_APP_BACKEND_URL=http://localhost:5000/api/
+REACT_APP_BACKEND_URL=http://localhost:5000/api/
