--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native": "^0.71.6",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
+    "read-excel-file": "^5.7.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
