--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
     "read-excel-file": "^5.7.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
