--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
+    "react-highlight-words": "^0.20.0",
     "react-native": "^0.71.6",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.3",
+    "read-excel-file": "^5.7.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
