--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-google-login": "^5.2.2",
     "react-highlight-words": "^0.20.0",
     "react-native": "^0.71.6",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
@@ -27,7 +28,8 @@
     "react-toastify": "^9.1.3",
     "read-excel-file": "^5.7.1",
     "styled-components": "^6.1.8",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
