--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.2.3",
     "axios": "^1.3.4",
     "firebase": "^10.4.0",
+    "formik": "^2.4.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "react": "^18.2.0",
@@ -30,7 +31,8 @@
     "read-excel-file": "^5.7.1",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
